library/src/network/libqsslsocket.h

typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QOcspResponse QOcspResponse;
typedef struct QSslCertificate QSslCertificate;
typedef struct QSslCipher QSslCipher;
typedef struct QSslConfiguration QSslConfiguration;
typedef struct QSslError QSslError;
typedef struct QSslKey QSslKey;
typedef struct QSslPreSharedKeyAuthenticator QSslPreSharedKeyAuthenticator;
typedef struct QSslSocket QSslSocket;
typedef struct QVariant QVariant;
QSslSocket* QSslSocket_new();
QSslSocket* QSslSocket_new2(QObject* parent);
QMetaObject* QSslSocket_MetaObject(const QSslSocket* self);
void* QSslSocket_Metacast(QSslSocket* self, const char* param1);
int QSslSocket_Metacall(QSslSocket* self, int param1, int param2, void** param3);
libqt_string QSslSocket_Tr(const char* s);
void QSslSocket_Resume(QSslSocket* self);
void QSslSocket_ConnectToHostEncrypted(QSslSocket* self, libqt_string hostName, uint16_t port);
void QSslSocket_ConnectToHostEncrypted2(QSslSocket* self, libqt_string hostName, uint16_t port, libqt_string sslPeerName);
bool QSslSocket_SetSocketDescriptor(QSslSocket* self, intptr_t socketDescriptor, int state, int openMode);
void QSslSocket_ConnectToHost(QSslSocket* self, libqt_string hostName, uint16_t port, int openMode, int protocol);
void QSslSocket_DisconnectFromHost(QSslSocket* self);
void QSslSocket_SetSocketOption(QSslSocket* self, int option, QVariant* value);
QVariant* QSslSocket_SocketOption(QSslSocket* self, int option);
int QSslSocket_Mode(const QSslSocket* self);
bool QSslSocket_IsEncrypted(const QSslSocket* self);
int QSslSocket_Protocol(const QSslSocket* self);
void QSslSocket_SetProtocol(QSslSocket* self, int protocol);
int QSslSocket_PeerVerifyMode(const QSslSocket* self);
void QSslSocket_SetPeerVerifyMode(QSslSocket* self, int mode);
int QSslSocket_PeerVerifyDepth(const QSslSocket* self);
void QSslSocket_SetPeerVerifyDepth(QSslSocket* self, int depth);
libqt_string QSslSocket_PeerVerifyName(const QSslSocket* self);
void QSslSocket_SetPeerVerifyName(QSslSocket* self, libqt_string hostName);
long long QSslSocket_BytesAvailable(const QSslSocket* self);
long long QSslSocket_BytesToWrite(const QSslSocket* self);
bool QSslSocket_CanReadLine(const QSslSocket* self);
void QSslSocket_Close(QSslSocket* self);
bool QSslSocket_AtEnd(const QSslSocket* self);
void QSslSocket_SetReadBufferSize(QSslSocket* self, long long size);
long long QSslSocket_EncryptedBytesAvailable(const QSslSocket* self);
long long QSslSocket_EncryptedBytesToWrite(const QSslSocket* self);
QSslConfiguration* QSslSocket_SslConfiguration(const QSslSocket* self);
void QSslSocket_SetSslConfiguration(QSslSocket* self, QSslConfiguration* config);
void QSslSocket_SetLocalCertificateChain(QSslSocket* self, libqt_list /* of QSslCertificate* */ localChain);
libqt_list /* of QSslCertificate* */ QSslSocket_LocalCertificateChain(const QSslSocket* self);
void QSslSocket_SetLocalCertificate(QSslSocket* self, QSslCertificate* certificate);
void QSslSocket_SetLocalCertificateWithFileName(QSslSocket* self, libqt_string fileName);
QSslCertificate* QSslSocket_LocalCertificate(const QSslSocket* self);
QSslCertificate* QSslSocket_PeerCertificate(const QSslSocket* self);
libqt_list /* of QSslCertificate* */ QSslSocket_PeerCertificateChain(const QSslSocket* self);
QSslCipher* QSslSocket_SessionCipher(const QSslSocket* self);
int QSslSocket_SessionProtocol(const QSslSocket* self);
libqt_list /* of QOcspResponse* */ QSslSocket_OcspResponses(const QSslSocket* self);
void QSslSocket_SetPrivateKey(QSslSocket* self, QSslKey* key);
void QSslSocket_SetPrivateKeyWithFileName(QSslSocket* self, libqt_string fileName);
QSslKey* QSslSocket_PrivateKey(const QSslSocket* self);
bool QSslSocket_WaitForConnected(QSslSocket* self, int msecs);
bool QSslSocket_WaitForEncrypted(QSslSocket* self);
bool QSslSocket_WaitForReadyRead(QSslSocket* self, int msecs);
bool QSslSocket_WaitForBytesWritten(QSslSocket* self, int msecs);
bool QSslSocket_WaitForDisconnected(QSslSocket* self, int msecs);
libqt_list /* of QSslError* */ QSslSocket_SslHandshakeErrors(const QSslSocket* self);
bool QSslSocket_SupportsSsl();
long QSslSocket_SslLibraryVersionNumber();
libqt_string QSslSocket_SslLibraryVersionString();
long QSslSocket_SslLibraryBuildVersionNumber();
libqt_string QSslSocket_SslLibraryBuildVersionString();
libqt_list /* of libqt_string */ QSslSocket_AvailableBackends();
libqt_string QSslSocket_ActiveBackend();
bool QSslSocket_SetActiveBackend(libqt_string backendName);
libqt_list /* of int */ QSslSocket_SupportedProtocols();
bool QSslSocket_IsProtocolSupported(int protocol);
libqt_list /* of int */ QSslSocket_ImplementedClasses();
bool QSslSocket_IsClassImplemented(int cl);
libqt_list /* of int */ QSslSocket_SupportedFeatures();
bool QSslSocket_IsFeatureSupported(int feat);
void QSslSocket_IgnoreSslErrors(QSslSocket* self, libqt_list /* of QSslError* */ errors);
void QSslSocket_ContinueInterruptedHandshake(QSslSocket* self);
void QSslSocket_StartClientEncryption(QSslSocket* self);
void QSslSocket_StartServerEncryption(QSslSocket* self);
void QSslSocket_IgnoreSslErrors2(QSslSocket* self);
void QSslSocket_Encrypted(QSslSocket* self);
void QSslSocket_PeerVerifyError(QSslSocket* self, QSslError* errorVal);
void QSslSocket_SslErrors(QSslSocket* self, libqt_list /* of QSslError* */ errors);
void QSslSocket_ModeChanged(QSslSocket* self, int newMode);
void QSslSocket_EncryptedBytesWritten(QSslSocket* self, long long totalBytes);
void QSslSocket_PreSharedKeyAuthenticationRequired(QSslSocket* self, QSslPreSharedKeyAuthenticator* authenticator);
void QSslSocket_NewSessionTicketReceived(QSslSocket* self);
void QSslSocket_AlertSent(QSslSocket* self, int level, int typeVal, libqt_string description);
void QSslSocket_AlertReceived(QSslSocket* self, int level, int typeVal, libqt_string description);
void QSslSocket_HandshakeInterruptedOnError(QSslSocket* self, QSslError* errorVal);
long long QSslSocket_ReadData(QSslSocket* self, char* data, long long maxlen);
long long QSslSocket_SkipData(QSslSocket* self, long long maxSize);
long long QSslSocket_WriteData(QSslSocket* self, const char* data, long long lenVal);
libqt_string QSslSocket_Tr2(const char* s, const char* c);
libqt_string QSslSocket_Tr3(const char* s, const char* c, int n);
void QSslSocket_ConnectToHostEncrypted3(QSslSocket* self, libqt_string hostName, uint16_t port, int mode);
void QSslSocket_ConnectToHostEncrypted4(QSslSocket* self, libqt_string hostName, uint16_t port, int mode, int protocol);
void QSslSocket_ConnectToHostEncrypted42(QSslSocket* self, libqt_string hostName, uint16_t port, libqt_string sslPeerName, int mode);
void QSslSocket_ConnectToHostEncrypted5(QSslSocket* self, libqt_string hostName, uint16_t port, libqt_string sslPeerName, int mode, int protocol);
void QSslSocket_SetLocalCertificate2(QSslSocket* self, libqt_string fileName, int format);
void QSslSocket_SetPrivateKey2(QSslSocket* self, libqt_string fileName, int algorithm);
void QSslSocket_SetPrivateKey3(QSslSocket* self, libqt_string fileName, int algorithm, int format);